# Console-App

./: CMakeLists.txt  README.md  image_processor.cpp
Blur/: blur.cpp  blur.h
BmpStructure/: bmp_structure.cpp  bmp_structure.h  read.cpp  write.cpp
Crop/: crop.cpp  crop.h
EdgeDetection/: edge_detection.cpp  edge_detection.h
Filter/: filter_definition.h  filtr_factory.cpp  filtr_factory.h  filtr_interface.cpp  filtr_interface.h  test_filter_factory.cpp
Grayscale/: grayscale.cpp  grayscale.h
Image/: image.cpp  image.h
Negative/: negative.cpp  negative.h
Parser/: parser.cpp  parser.h  parser_test.cpp
Pixellate/: pixellate.cpp  pixellate.h
Random/: random_filter.cpp  random_filter.h
Sharpening/: sharpening.cpp  sharpening.h
Warnings/: warnings.cpp  warnings.h
